--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "eslint": "^7.21.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.5.1",
+    "mssql": "^6.3.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31",
     "yup": "^0.32.9"
